# WHITE

./: CMakeLists.txt  README.md  TestCase.cpp  TestSubject1
SandBox/: nameSpace.cpp
SandBox/headers/: launchDependency.h  nameSpace.h  os.h
mountMask/root/etc/: group  hostname  nsswitch.conf  passwd  shadow
mountMask/root/home/kali/.mozilla/firefox/60zao1kb.default/: times.json
mountMask/root/home/kali/.mozilla/firefox/p99vxzfk.default-esr/: favicons.sqlite-wal  formhistory.sqlite  lock  xulstore.json
mountMask/root/home/kali/.mozilla/firefox/p99vxzfk.default-esr/bookmarkbackups/: bookmarks-2025-09-29_13_1AAS8jAk1k1fOkJ71FqkndNDpyq_e06mtwa0aCO3-tU=.jsonlz4
src/: PreRequisite.cpp  WHITE.cpp
